<?xml version="1.0"?>
<package format="2">
  <name>eth_ros_ex2</name>
  <version>0.1.0</version>
  <description>The eth_ros_ex2 package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="jason@todo.todo">jason</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>  
  <depend>sensor_msgs</depend>

  <exec_depend>smb_gazebo</exec_depend>
</package>
